--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 <div id="particles-js"></div>
 
 <!-- scripts -->
-<script src="../particles.js"></script>
+<script src="js/particles.min.js"></script>
 <script src="js/app.js"></script>
 
-<!-- stats.js -->
-<!-- <script src="js/lib/stats.js"></script> -->
 <script>
   var count_particles, stats, update;
   stats = new Stats;
